# Tuvok

./: .gitignore  .gitmodules  .travis.yml  .tuvok_srcs  AbstrConverter.cpp  AbstrConverter.h  AbstrGeoConverter.cpp  AbstrGeoConverter.h  AmiraConverter.cpp  AmiraConverter.h  AnalyzeConverter.cpp  AnalyzeConverter.h  Appendix.cpp  Appendix.h  ArcBall.cpp  ArcBall.h  AvgMinMaxTracker.h  BOVConverter.cpp  BOVConverter.h  Batch.pro  Brick.h  BrickCache.cpp  BrickCache.h  BrickedDataset.cpp  BrickedDataset.h  CMakeLists.txt  Clipper.cpp  Clipper.h  CommandReturn.h  Console.h  DSFactory.cpp  DSFactory.h  Dataset.cpp  Dataset.h  DirectoryParser.cpp  DirectoryParser.h  DynamicBrickingDS.cpp  DynamicBrickingDS.h  DynamicDX.cpp  DynamicDX.h  (+159 more)
Basics/: Appendix.cpp  Appendix.h  ArcBall.cpp  ArcBall.h  AvgMinMaxTracker.h  BStream.h  Clipper.cpp  Clipper.h  Console.h  DynamicDX.cpp  DynamicDX.h  EndianConvert.h  EndianFile.cpp  EndianFile.h  GeometryGenerator.cpp  GeometryGenerator.h  Grids.h  Interpolant.h  KDTree.cpp  KDTree.h  LargeFile.cpp  LargeFile.h  LargeFileAIO.cpp  LargeFileAIO.h  LargeFileC.cpp  LargeFileC.h  LargeFileFD.cpp  LargeFileFD.h  LargeFileMMap.cpp  LargeFileMMap.h  LargeRAWFile.cpp  LargeRAWFile.h  MC.cpp  MC.h  MC.inl  MathTools.cpp  MathTools.h  MemMappedFile.cpp  MemMappedFile.h  Mesh.cpp  (+23 more)
CMake/: TuvokConfig.cmake.in
Checksums/: MD5.cpp  MD5.h  crc32.h
Controller/: Controller.h  MasterController.cpp  MasterController.h  StackTimer.h
DICOM/: DICOMParser.cpp  DICOMParser.h
DebugOut/: AbstrDebugOut.cpp  AbstrDebugOut.h  ConsoleOut.cpp  ConsoleOut.h  MultiplexOut.cpp  MultiplexOut.h  TextfileOut.cpp  TextfileOut.h  debug.c  debug.h
IO/: .gitignore  AbstrConverter.cpp  AbstrConverter.h  AbstrGeoConverter.cpp  AbstrGeoConverter.h  AmiraConverter.cpp  AmiraConverter.h  AnalyzeConverter.cpp  AnalyzeConverter.h  BMinMax.cpp  BMinMax.h  BOVConverter.cpp  BOVConverter.h  Brick.h  BrickCache.cpp  BrickCache.h  BrickedDataset.cpp  BrickedDataset.h  CoreVolume.cpp  CoreVolume.h  DSFactory.cpp  DSFactory.h  Dataset.cpp  Dataset.h  DirectoryParser.cpp  DirectoryParser.h  DynamicBrickingDS.cpp  DynamicBrickingDS.h  FileBackedDataset.cpp  FileBackedDataset.h  G3D.cpp  G3D.h  GeomViewConverter.cpp  GeomViewConverter.h  I3MConverter.cpp  I3MConverter.h  IASSConverter.cpp  IASSConverter.h  IO.pro  IOManager.cpp  (+88 more)
Images/: ImageParser.cpp  ImageParser.h  StackExporter.cpp  StackExporter.h
LUAScripting/: LUAClassConstructor.cpp  LUAClassConstructor.h  LUAClassInstance.cpp  LUAClassInstance.h  LUAClassInstanceHook.cpp  LUAClassInstanceHook.h  LUAClassInstanceReg.cpp  LUAClassInstanceReg.h  LUAClassRegistration.cpp  LUAClassRegistration.h  LUAError.h  LUAFunBinding.h  LUAFunBindingCore.h  LUAMemberHook.cpp  LUAMemberHook.h  LUAMemberReg.cpp  LUAMemberReg.h  LUAMemberRegUnsafe.cpp  LUAMemberRegUnsafe.h  LUAProvenance.cpp  LUAProvenance.h  LUAScriptHook.cpp  LUAScriptHook.h  LUAScripting.cpp  LUAScripting.h  LUAScriptingExecBody.h  LUAScriptingExecHeader.h  LUAScripting_test.cpp  LUAStackRAII.cpp  LUAStackRAII.h  LUATuvokSpecificTypes.h
LuaScript/: LuaClassConstructor.cpp  LuaClassConstructor.h  LuaClassRegistration.h  LuaError.h  LuaFunBindingCore.h  LuaMemberReg.cpp  LuaScripting.h
LuaScripting/: LuaClassConstructor.cpp  LuaClassConstructor.h  LuaClassInstance.cpp  LuaClassInstance.h  LuaClassRegistration.cpp  LuaClassRegistration.h  LuaCommon.h  LuaDebug.cpp  LuaDebug.h  LuaError.h  LuaFunBinding.h  LuaFunBindingCore.h  LuaMemberReg.cpp  LuaMemberReg.h  LuaMemberRegUnsafe.cpp  LuaMemberRegUnsafe.h  LuaProvenance.cpp  LuaProvenance.h  LuaScripting.cpp  LuaScripting.h  LuaScriptingExecBody.h  LuaScriptingExecHeader.h  LuaStackRAII.cpp  LuaStackRAII.h
Renderer/: AbstrRenderer.cpp  AbstrRenderer.h  Context.cpp  Context.h  ContextID.h  ContextIdentification.h  CullingLOD.cpp  CullingLOD.h  FrameCapture.cpp  FrameCapture.h  GLFBOTex.cpp  GLFBOTex.h  GLFrameCapture.cpp  GLFrameCapture.h  GLInclude.h  GLObject.h  GLRaycaster.cpp  GLRaycaster.h  GLRenderer.cpp  GLRenderer.h  GLSBVR.cpp  GLSBVR.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.cpp  GLTexture.h  GLTexture1D.cpp  GLTexture1D.h  GLTexture2D.cpp  GLTexture2D.h  GLTexture3D.cpp  GLTexture3D.h  GPUObject.h  RenderMesh.cpp  RenderMesh.h  RenderRegion.cpp  RenderRegion.h  SBVRGeogen.cpp  SBVRGeogen.h  SBVRGeogen2D.cpp  (+11 more)
Scripting/: Scriptable.h  Scripting.cpp  Scripting.h
Scripts/: MakeStaticQT.bat
Shaders/: 1D-slice-FS.glsl  2D-slice-FS.glsl  BBox-FS.glsl  BBox-VS.glsl  BTF.glsl  Compose-AF-FS.glsl  Compose-Anaglyphs-FS.glsl  Compose-CV-FS.glsl  Compose-Color-FS.glsl  Compose-FS.glsl  Compose-SBS-FS.glsl  Compose-Scanline-FS.glsl  Compositing.glsl  FTB.glsl  GLGridLeaper-GradientTools.glsl  GLGridLeaper-Method-1D-L-color.glsl  GLGridLeaper-Method-1D-L.glsl  GLGridLeaper-Method-1D-color.glsl  GLGridLeaper-Method-1D.glsl  GLGridLeaper-Method-2D-L-color.glsl  GLGridLeaper-Method-2D-L.glsl  GLGridLeaper-Method-2D-color.glsl  GLGridLeaper-Method-2D.glsl  GLGridLeaper-Method-iso-color.glsl  GLGridLeaper-Method-iso.glsl  GLGridLeaper-NearPlane-VS.glsl  GLGridLeaper-VS.glsl  GLGridLeaper-blend.glsl  GLGridLeaper-entry-VS.glsl  GLGridLeaper-frontfaces-FS.glsl  GLGridLeaper-iso.glsl  GLRaycaster-1D-FS-NC.glsl  GLRaycaster-1D-FS.glsl  GLRaycaster-1D-light-FS-NC.glsl  GLRaycaster-1D-light-FS.glsl  GLRaycaster-2D-FS-NC.glsl  GLRaycaster-2D-FS.glsl  GLRaycaster-2D-light-FS-NC.glsl  GLRaycaster-2D-light-FS.glsl  GLRaycaster-Color-FS-NC.glsl  (+65 more)
Systeminfo/: VidMemViaDDraw.cpp  VidMemViaDXGI.cpp
TTIFFWriter/: TTIFFWriter.cpp  TTIFFWriter.h
TuvokServer/: .gitignore  callperformer.cpp  callperformer.h  main.cpp  tvkserver.cpp  tvkserver.h
UVF/: DataBlock.cpp  DataBlock.h  GeometryDataBlock.cpp  GeometryDataBlock.h  GlobalHeader.cpp  GlobalHeader.h  Histogram1DDataBlock.cpp  Histogram1DDataBlock.h  Histogram2DDataBlock.cpp  Histogram2DDataBlock.h  KeyValuePairDataBlock.cpp  KeyValuePairDataBlock.h  MaxMinDataBlock.cpp  MaxMinDataBlock.h  RasterDataBlock.cpp  RasterDataBlock.h  TOCBlock.cpp  TOCBlock.h  TriangleSoupBlock.cpp  UVF.cpp  UVF.h  (+4 more)
(+301 files in other folders)
